--- a/src/App.css
+++ b/src/App.css
@@ -4,17 +4,32 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  max-height: 6vmin;
 }
 
 .App-header {
+  padding: 1vmin;
   background-color: #282c34;
-  min-height: 100vh;
+  height: 6vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  color: white;
+}
+
+.App-main {
+  padding: 1vmin;
+  height: 88vh;
+  color: #010a0b;
+  background-color: cadetblue;
+}
+.App-footer {
+  background-color: #282c34;
+  max-height: 6vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 10px;
   color: white;
 }
 
