--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -5,30 +5,40 @@
 }
 :root {
   --darkviolet: hsl(282, 100%, 18%);
+  --white: white;
+  --black: black;
 }
 .App {
   text-align: center;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  /*animation: App-logo-spin infinite 20s linear;*/
   transform: scaleX(-1);
-  max-height: 9vmin;
+  max-height: 6vmin;
 }
-
+.App-logo-brand {
+  padding: 1vmin 2vw;
+}
 .App-header {
-  padding: 1vmin;
-  background-color: var(--darkviolet);
-  height: 6vh;
+  padding: 1vmin 3vw;
+  background-color: var(--white);
+  height: 7vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: white;
+  color: var(--black);
+  box-shadow: 0px 1px 5px 0px #ccc;
+  z-index: 10;
+  position: fixed;
+  width: 100vw;
 }
 
+.App-header > span {
+  display: flex;
+}
 .App-header-login-btn {
   border: 1px solid #fdfdfd;
-  background-color: cadetblue;
   padding: 1vmin;
   border-radius: .6vmin;
   font-weight: bold;
@@ -52,16 +62,18 @@
 }
 .App-main {
   padding: 1vmin;
+  padding-top: 8vh;
   min-height: 88vh;
   color: #010a0b;
-  background-color: cadetblue;
+  background-color: var(--white);
+  margin-bottom: 5vh;
 }
 
 .App-article{
   padding: 1vmin;
-  margin: 2vmin auto;
+  margin: 2vmin auto 3vh;
   background-color: whitesmoke;
-  width: 80vw;
+  width: 90vw;
   max-width: 760px;
 }
 
@@ -72,13 +84,15 @@
   padding: 2vmin 1vmin;
   border-bottom: .2vmin solid lightgrey;
   margin-bottom: 1vmin;
+  margin-bottom: 1vmin;
+  align-items: center;
 }
 
 .App-articleHeader > img {
   width: 100%;
-  height: 4vmin;
-  width: 4vmin;
-  border-radius: 2vmin;
+  height: 5.7vmin;
+  width: 5.7vmin;
+  border-radius: 3vmin;
   border: .24vmin solid black;
   box-shadow: 0 0 2vmin black;
 }
@@ -98,25 +112,58 @@
 .App-article-tematicalTag {
   display: flex;
   justify-content: space-between;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 /************/
 .App-footer {
-  background-color: var(--darkviolet);
-  padding: 1vmin;
-  height: 6vh;
+  background-color: var(--white);
+  padding: 1vmin 4vw;
+  height: 7vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-size: 10px;
   color: white;
+  position: fixed;
+  z-index: 10;
+  bottom: 0;
+  width: 100vw;
+  box-sizing: border-box;
+  max-width: 100vw;
+  box-shadow: 0px -2px 5px 0px #ccc;
+}
+.App-footerIcons {
+  flex-grow: 1;
+}
+.App-footerIcons.App-fileUpload_container {
+  flex-grow: 2;
+}
+.App-icon_addImage {
+  height: 6vh;
+}
+.App-fileUpload_upload__input {
+  display: none;
+}
+
+.inputfile + label {
+  font-size: 1.25em;
+  font-weight: 700;
+  color: white;
+  background-color: black;
+  display: inline-block;
+}
+
+.inputfile:focus + label,
+.inputfile + label:hover {
+  background-color: red;
 }
 
 .App-link {
   color: #61dafb;
 }
-.icon_credits {
-  display: none;
-}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(360deg);
@@ -124,4 +171,49 @@
   to {
     transform: rotate(0deg);
   }
+}
+
+/*--------------------*/
+/* Tooltip container */
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+  right: 0;
+  visibility: hidden;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+  top: 7vh;
+  width: 35vw;
+  max-width: 150px;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+.tooltip-bottom {
+  background-color: #010a0b;
+  color: #f70000;
+  border: none;
+  font-weight: 900;
+}
+
+.tooltip-bottom::after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 80%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent #555 transparent;
 }
